math-core/tests/snapshots/conversion_test__double_prime_and_sub_super.snap
---
source: math-core/tests/conversion_test.rs
expression: "f''_3^2"
---
<math>
    <msubsup>
        <mi>f</mi>
        <mn>3</mn>
        <mrow>
            <mo>″</mo>
            <mn>2</mn>
        </mrow>
    </msubsup>
</math>
