math-core/tests/snapshots/conversion_test__equal_after_plus.snap
---
source: math-core/tests/conversion_test.rs
expression: x+ = 4
---
<math>
    <mi>x</mi>
    <mo lspace="0" rspace="0">+</mo>
    <mo>=</mo>
    <mn>4</mn>
</math>
