math-core/tests/snapshots/conversion_test__equal_at_group_begin.snap
---
source: math-core/tests/conversion_test.rs
expression: "x{=x}"
---
<math>
    <mi>x</mi>
    <mrow>
        <mo lspace="0">=</mo>
        <mi>x</mi>
    </mrow>
</math>
