math-core/tests/snapshots/conversion_test__equal_before_right.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\left(x=\\right)x"
---
<math>
    <mrow>
        <mo>(</mo>
        <mrow>
            <mi>x</mi>
            <mo rspace="0">=</mo>
        </mrow>
        <mo>)</mo>
    </mrow>
    <mi>x</mi>
</math>
