math-core/tests/snapshots/conversion_test__equal_equal.snap
---
source: math-core/tests/conversion_test.rs
expression: 4==4
---
<math>
    <mn>4</mn>
    <mo rspace="0">=</mo>
    <mo lspace="0">=</mo>
    <mn>4</mn>
</math>
